Fixes issues in responsivness of timeline on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -103,10 +103,13 @@ td a {
     margin-left: 40px;
 }
 
+#menu + article {
+    margin: 100px auto 20px auto;
+}
+
 @media only screen and (min-width: 1366px) {
-  .w3-container{
-    padding-left: 150px;
-    padding-right: 150px
+  #menu + article {
+    max-width: 85%;
   }
 }
 
