--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,7 +1,4 @@
 /* TIMELINE STYLES */
-.timeline > ul {
-  padding: 0;
-}
 
 .timeline ul li {
   list-style-type: none;
@@ -111,12 +108,13 @@
 }
 
 @media screen and (max-width: 600px) {
+  
   .timeline ul li {
-    margin-left: -20px;
+    margin-left: 23px;
   }
    
   .timeline ul li article {
-    width: calc(100vw - 217px);
+    width: calc(100vw - 165px);
   }
    
   .timeline ul li:nth-child(even) article {
